<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ActualizaTareaFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/separacion_contenedor_cuerpo"
        app:cardCornerRadius="@dimen/border_radius"
        app:cardElevation="@dimen/sombra_tarjeta">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/separacion_elemento_elemento">

            <TextView
                android:id="@+id/textViewTituloActualizaTarea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/separacion_elemento_elemento"
                android:layout_marginEnd="@dimen/separacion_elemento_elemento"
                android:text="@string/actualizaci_n"
                android:textSize="@dimen/texto_titulo"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextIdActualizaTarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/separacion_elemento_elemento"
                android:layout_marginTop="@dimen/separacion_contenido_contenido"
                android:layout_marginEnd="@dimen/separacion_elemento_elemento"
                android:ems="10"
                android:hint="@string/id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTituloActualizaTarea" />

            <EditText
                android:id="@+id/editTextNombreActualizaTarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/separacion_elemento_elemento"
                android:layout_marginTop="@dimen/separacion_contenido_contenido"
                android:layout_marginEnd="@dimen/separacion_elemento_elemento"
                android:ems="10"
                android:hint="@string/nombre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextIdActualizaTarea" />

            <EditText
                android:id="@+id/editTextComplejidadActualizaTarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/separacion_elemento_elemento"
                android:layout_marginTop="@dimen/separacion_contenido_contenido"
                android:layout_marginEnd="@dimen/separacion_elemento_elemento"
                android:ems="10"
                android:hint="@string/complejidad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNombreActualizaTarea" />

            <EditText
                android:id="@+id/editTextHorasActualizaTarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/separacion_elemento_elemento"
                android:layout_marginTop="@dimen/separacion_contenido_contenido"
                android:layout_marginEnd="@dimen/separacion_elemento_elemento"
                android:ems="10"
                android:hint="@string/horas"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextComplejidadActualizaTarea" />

            <EditText
                android:id="@+id/editTextFechaActualizaTarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/separacion_elemento_elemento"
                android:layout_marginTop="@dimen/separacion_contenido_contenido"
                android:layout_marginEnd="@dimen/separacion_elemento_elemento"
                android:ems="10"
                android:hint="@string/fecha"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextHorasActualizaTarea" />

            <EditText
                android:id="@+id/editTextEstadoActualizaTarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/separacion_elemento_elemento"
                android:layout_marginTop="@dimen/separacion_contenido_contenido"
                android:layout_marginEnd="@dimen/separacion_elemento_elemento"
                android:ems="10"
                android:hint="@string/estado"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextFechaActualizaTarea" />

            <EditText
                android:id="@+id/editTextProyecto_IdActualizaTarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/separacion_elemento_elemento"
                android:layout_marginTop="@dimen/separacion_contenido_contenido"
                android:layout_marginEnd="@dimen/separacion_elemento_elemento"
                android:ems="10"
                android:hint="@string/proyecto_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEstadoActualizaTarea" />

            <EditText
                android:id="@+id/editTextActividad_IdActualizaTarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/separacion_elemento_elemento"
                android:layout_marginTop="@dimen/separacion_contenido_contenido"
                android:layout_marginEnd="@dimen/separacion_elemento_elemento"
                android:ems="10"
                android:hint="@string/actividad_id"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextProyecto_IdActualizaTarea" />

            <EditText
                android:id="@+id/editTextEmpleado_IdActualizaTarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/separacion_elemento_elemento"
                android:layout_marginTop="@dimen/separacion_contenido_contenido"
                android:layout_marginEnd="@dimen/separacion_elemento_elemento"
                android:ems="10"
                android:hint="@string/empleado_id"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextActividad_IdActualizaTarea" />

            <Button
                android:id="@+id/buttonActualizarActualizaTarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/separacion_elemento_elemento"
                android:layout_marginTop="@dimen/separacion_contenido_contenido"
                android:layout_marginEnd="@dimen/separacion_elemento_elemento"
                android:text="@string/actualizar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmpleado_IdActualizaTarea" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>