<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ActualizaEmpleadoFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/separacion_contenedor_cuerpo"
        app:cardCornerRadius="@dimen/border_radius"
        app:cardElevation="@dimen/sombra_tarjeta">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/separacion_elemento_elemento">

            <TextView
                android:id="@+id/textViewTituloActualizaEmpleado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/separacion_elemento_elemento"
                android:layout_marginEnd="@dimen/separacion_elemento_elemento"
                android:text="@string/actualizaci_n"
                android:textSize="@dimen/texto_titulo"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextIdActualizaEmpleado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/separacion_elemento_elemento"
                android:layout_marginTop="@dimen/separacion_contenido_contenido"
                android:layout_marginEnd="@dimen/separacion_elemento_elemento"
                android:ems="10"
                android:hint="@string/id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTituloActualizaEmpleado" />

            <EditText
                android:id="@+id/editTextNombreActualizaEmpleado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/separacion_elemento_elemento"
                android:layout_marginTop="@dimen/separacion_contenido_contenido"
                android:layout_marginEnd="@dimen/separacion_elemento_elemento"
                android:ems="10"
                android:hint="@string/nombre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextIdActualizaEmpleado" />

            <EditText
                android:id="@+id/editTextApellidoActualizaEmpleado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/separacion_elemento_elemento"
                android:layout_marginTop="@dimen/separacion_contenido_contenido"
                android:layout_marginEnd="@dimen/separacion_elemento_elemento"
                android:ems="10"
                android:hint="@string/apellido"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNombreActualizaEmpleado" />

            <EditText
                android:id="@+id/editTextCelularActualizaEmpleado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/separacion_elemento_elemento"
                android:layout_marginTop="@dimen/separacion_contenido_contenido"
                android:layout_marginEnd="@dimen/separacion_elemento_elemento"
                android:ems="10"
                android:hint="@string/celular"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextApellidoActualizaEmpleado" />

            <EditText
                android:id="@+id/editTextCorreoActualizaEmpleado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/separacion_elemento_elemento"
                android:layout_marginTop="@dimen/separacion_contenido_contenido"
                android:layout_marginEnd="@dimen/separacion_elemento_elemento"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextCelularActualizaEmpleado" />

            <EditText
                android:id="@+id/editTextClaveActualizaEmpleado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/separacion_elemento_elemento"
                android:layout_marginTop="@dimen/separacion_contenido_contenido"
                android:layout_marginEnd="@dimen/separacion_elemento_elemento"
                android:ems="10"
                android:hint="@string/clave"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextCorreoActualizaEmpleado" />

            <EditText
                android:id="@+id/editTextEstadoActualizaEmpleado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/separacion_elemento_elemento"
                android:layout_marginTop="@dimen/separacion_contenido_contenido"
                android:layout_marginEnd="@dimen/separacion_elemento_elemento"
                android:ems="10"
                android:hint="@string/estado"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextClaveActualizaEmpleado" />

            <EditText
                android:id="@+id/editTextCargo_IdActualizaEmpleado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/separacion_elemento_elemento"
                android:layout_marginTop="@dimen/separacion_contenido_contenido"
                android:layout_marginEnd="@dimen/separacion_elemento_elemento"
                android:ems="10"
                android:hint="@string/cargo"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEstadoActualizaEmpleado" />

            <Button
                android:id="@+id/buttonActualizarActualizaEmpleado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/separacion_elemento_elemento"
                android:layout_marginTop="@dimen/separacion_contenido_contenido"
                android:layout_marginEnd="@dimen/separacion_elemento_elemento"
                android:text="@string/actualizar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextCargo_IdActualizaEmpleado" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>